# book_loader

./: .gitignore  CLAUDE.md  README.md  README.zh-TW.md  TESTING.md  main.py  pyproject.toml
core/adobe/: account.py
src/book_loader/: cli.py
src/book_loader/core/: workflow.py
src/book_loader/core/adobe/: __init__.py  account.py  fulfill.py  libadobe.py  libadobeAccount.py  libadobeFulfill.py
src/book_loader/core/conversion/: __init__.py  calibre_wrapper.py  epub_to_pdf.py  epub_to_pdf_improved.py
src/book_loader/core/drm/: __init__.py  ineptepub.py  remover.py
src/book_loader/core/kobo/: __init__.py  decryptor.py  library.py
src/book_loader/utils/: config.py  errors.py
