[project]
name = "book-loader"
version = "0.1.0"
description = "Adobe ACSM ebook DRM removal tool - Supports anonymous and Adobe ID authorization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Adobe ACSM core dependencies
    "lxml>=4.9.0",
    "oscrypto>=1.3.0",
    "asn1crypto>=1.5.0",
    "pycryptodome>=3.18.0",
    "rsa>=4.9",

    # CLI interface
    "click>=8.1.0",

    # EPUB processing and conversion
    "ebooklib>=0.18",
    "Pillow>=10.0.0",
    "weasyprint>=60.0",  # EPUB → PDF conversion
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.7.0",
    "ruff>=0.0.285",
]

[project.scripts]
book-loader = "book_loader.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
